Fix problem where drag handles spill over expanded app preview when in expanded mode by setting proper isolation context

--- a/inst/ui-editor-react/src/EditorContainer.module.css
+++ b/inst/ui-editor-react/src/EditorContainer.module.css
@@ -18,9 +18,11 @@
   min-height: 0;
 }
 
-.container > * {
+.container > div {
   outline: 1px solid var(--header-grey);
   min-width: 0;
+  /* Each sub-section gets its own stacking context so it won't leak over others */
+  isolation: isolate;
 }
 
 .elementsPanel {
